# CV-proj-2026

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  requirements.txt
configs/: rock5b_default.yaml  windows_default.yaml
cpp/: CMakeLists.txt
cpp/include/central_control/: common.hpp
cpp/include/cvproj/: aravis_frame_source.hpp  frame_source.hpp  hikrobot_mvs_source.hpp  motion_pipeline.hpp  opencv_video_source.hpp  yolo_onnx_detector.hpp
cpp/src/: aravis_frame_source.cpp  common.cpp  components.cpp  hikrobot_mvs_source.cpp  main.cpp  motion_pipeline.cpp  opencv_video_source.cpp  runtime.cpp  yolo_onnx_detector.cpp
models/onnx/: README.md
models/rknn/: README.md
project_docs/: CPP_WINDOWS_BUILD.md  README_MACOS.md  ROCK5B_PORTING.md  SYSTEM_BLOCK_DIAGRAM.md  requirements.txt  system_design.md
src/: benchmark.py  camera_mapper.py  can_monitor.py  can_test.py  estimate_compute.py  flow_viewer.py  gimbal_controller.py  htdw_motor_ctrl.py  main-old.py  main.py  t265_pose_basic.py  yolo_viewer.py
src/data_source/: realsense_wrapper.py
src/motion_detection/: optical_flow.py  roi_generator.py
src/recognition/: yolo_detector.py
src/tracking/: multi_object_tracker.py
src/utils/: visualization.py
src/yolo11n.mlpackage/: Manifest.json
src/yolo11n.mlpackage/Data/com.apple.CoreML/: model.mlmodel
tools/convert_onnx_to_rknn/: README.md
